# master-slave-replication-cpp

./: .gitignore  CMakeLists.txt  README.md  Test_Plan.md  Test_report.md
src/: main.cpp
src/model/: LogEntry.cpp  LogEntry.h
src/node/: AbstractNode.cpp  AbstractNode.h  MasterNode.cpp  MasterNode.h  Node.h  SlaveNode.cpp  SlaveNode.h
src/system/: ReplicationSystem.cpp  ReplicationSystem.h
src/tests/: FaultToleranceTest.cpp  MainTest.cpp  NodeTest.cpp
